--- a/users/templates/users/dashboard_base.html
+++ b/users/templates/users/dashboard_base.html
@@ -216,6 +216,12 @@
                             <i class="fas fa-chevron-down ms-auto submenu-arrow" style="font-size: 0.8rem; transition: transform 0.3s;"></i>
                         </a>
                         <div class="submenu" id="maternitySubmenu">
+                            <a href="{% url 'maternity:visit_queue_center' %}" 
+                               hx-get="{% url 'maternity:visit_queue_center' %}" hx-target="#mainContent" hx-select="#mainContent" hx-swap="outerHTML" hx-push-url="true"
+                               class="menu-item submenu-item {% if request.resolver_match.url_name == 'visit_queue_center' %}active{% endif %}">
+                                <i class="fas fa-users-cog"></i>
+                                <span>Visit Queue Center</span>
+                            </a>
                             <a href="{% url 'maternity:dashboard' %}" 
                                hx-get="{% url 'maternity:dashboard' %}" hx-target="#mainContent" hx-select="#mainContent" hx-swap="outerHTML" hx-push-url="true"
                                class="menu-item submenu-item {% if request.resolver_match.url_name == 'dashboard' and request.resolver_match.namespace == 'maternity' %}active{% endif %}">
