--- a/users/templates/users/dashboard_base.html
+++ b/users/templates/users/dashboard_base.html
@@ -264,7 +264,7 @@
                        
                         
                     {% endif %}
-                    {% if user.role == 'SHA' %}
+                    {% if user.role == 'SHA Manager' %}
                         
                         <a href="{% url 'accounts:insurance_manager' %}" 
                            hx-get="{% url 'accounts:insurance_manager' %}" hx-target="#mainContent" hx-select="#mainContent" hx-swap="outerHTML" hx-push-url="true"
