--- a/home/templates/home/patient_detail.html
+++ b/home/templates/home/patient_detail.html
@@ -520,6 +520,7 @@
                                     <a href="{% url 'inpatient:discharge_patient' active_admission.id %}" class="modern-btn btn-danger" style="width: 100%;">
                                         <i class="fas fa-sign-out-alt"></i> Discharge Patient
                                     </a>
+
                                 {% else %}
                                     <a href="{% url 'inpatient:admit_patient' patient.pk %}" class="modern-btn btn-warning" style="width: 100%;">
                                         <i class="fas fa-bed"></i> Admit for Observation
@@ -527,17 +528,15 @@
                                     <a href="{% url 'home:refer_patient' latest_visit.id %}" class="modern-btn btn-info" style="width: 100%;">
                                         <i class="fas fa-stethoscope"></i> Refer Patient
                                     </a>
-                                {% endif %}
-                            {% endif %}
-                                    {% if visit_id %}
-                                        <a href="{% url 'home:create_prescription' visit_id %}" class="modern-btn btn-success" style="width: 100%;">
+                                
+                          
+                                   <a href="{% url 'home:create_prescription' latest_visit.id %}" class="modern-btn btn-success" style="width: 100%;">
                                             <i class="fas fa-prescription"></i> New Prescription
                                         </a>
-                                    {% endif %}
-                            {% if user.role == 'Doctor' or user.role == 'Admin' %}
                                 <button onclick="showModal('appointmentModal')" class="modern-btn btn-primary" style="width: 100%; border: none;">
                                     <i class="fas fa-calendar-plus"></i> Book Appointment
                                 </button>
+                                {% endif %}
                             {% endif %}
                         {% else %}
                             <div style="background: #f1f5f9; padding: 1rem; border-radius: 12px; border: 1px solid var(--clinical-border); text-align: center;">
