--- a/accounts/templates/accounts/accountant_dashboard.html
+++ b/accounts/templates/accounts/accountant_dashboard.html
@@ -346,6 +346,8 @@
         }
     }
     </style>
+{% endblock %}
+{% block content %}
     <div>
         <!-- Header -->
         <div class="page-header">
