--- a/accounts/templates/accounts/insurance_manager.html
+++ b/accounts/templates/accounts/insurance_manager.html
@@ -455,6 +455,8 @@
         display: none !important;
     }
 </style>
+{% endblock %}
+{% block content %}
     <div class="insurance-container">
         <!-- Header -->
         <div class="flex justify-between items-end mb-10">
